Updated english translations

--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -5,7 +5,7 @@
   advisory: 0
   position:
   bio: "Kristina ist seit August 2014 Geschäftsführerin bei der Open Knowledge Foundation Deutschland. Davor war sie bei UNHCR in Myanmar für den Bereich Donor Relations zuständig. Kristina hat als Senior Program Manager der Carnegie Endowment for International Peace das Brüsseler Büro stellvertretend geleitet und als Programm und Konferenz Manager den Bereich Internationale Politik der Körber Stiftung begleitet. Weitere berufliche Stationen waren der Danish Refugee Council in Myanmar und das Wall Street Journal Europe in Berlin."
-  bio_en: "Kristina is Chief Operating Officer of OKF DE since August 2014. Previously, she worked as Peace Building Fund Coordinator with UNHCR in Myanmar. Kristina was the deputy lead of the Brussels office of Carnegie Endowment for International Peace, and part of the International Relations team of Körber Foundation.In addition, she worked with the Danish Refugee Council in Myanmar and the Wall Street Journal Europe in Berlin."
+  bio_en: "Kristina is Chief Operating Officer of OKF DE since August 2014. Previously, she worked as Peace Building Fund Coordinator with UNHCR in Myanmar. Kristina was the deputy lead of the Brussels office of Carnegie Endowment for International Peace, and part of the International Relations team of Körber Foundation. She has furthermore worked with the Danish Refugee Council in Myanmar and the Wall Street Journal Europe in Berlin."
   mail: kristina.klein@okfn.de
   twitter:
   website:
@@ -17,7 +17,7 @@
   advisory: 0
   position:
   bio: "Helene engagiert sich insbesondere in den Bereichen OpenGLAM (Galeries, Libraries, Archives, Museums) und Open Culture. Mit ihrer Arbeit möchte sie den offenen Zugang und die freie Nutzbarkeit von Kulturerbe fördern, damit unsere Kulturschätze auch im digitalen Zeitalter relevant bleiben. Bei der Open Knowledge Foundation Deutschland ist sie als Projektleiterin verantwortlich für den Kultur-Hackathon Coding Da Vinci und arbeitet an dem EU-Forschungsprojekt Europeana Cloud, der Konferenz Zugang gestalten und dem Nachwuchsförderprogramm Jugend hackt mit. Studiert hat sie Kulturwissenschaften und Wirtschaft im In- und Ausland."
-  bio_en: "Helene's main focus is OpenGLAM (Galleries, Libraries, Archives, and Museums) and Open Culture. She is mainly interested in the ability of cultural heritage: preserving relevant cultural treasures in the digital age. At OKF DE, she is project lead of Coding da Vinci, a cultural hackathon. Besides that, she assists with the conference Zugang Gestalten and Jugend hackt. She studied cultural sciences and economics in Germany and abroad."
+  bio_en: "Helene's main focus is OpenGLAM (Galleries, Libraries, Archives, and Museums) and Open Culture. Through her work, she campaigns for open access to and free usage of cultural heritage, in order to ensure the relevance of cultural artefacts in the digital world. At OKF DE, she is project lead for Coding da Vinci, a cultural hackathon. She also assists with Zugang Gestalten and Jugend hackt. She studied cultural sciences and economics in Germany and abroad."
   mail: helene.hahn@okfn.de
   twitter: pluscha
   website:
@@ -41,7 +41,7 @@
   advisory: 0
   position:
   bio: "Julia arbeitet seit 2012 als Projektleiterin bei der Open Knowledge Foundation. Ihr Schwerpunkt liegt auf Projekten im Bereich Open Data und Civic Tech. Sie hat in den letzten Jahren eine Reihe von Community-Projekten umgesetzt, darunter „Stadt Land Code“, Deutschlands ersten Inkubator für Civic Tech und eine Reihe von Open-Data-Hackathons. Aktuell arbeitet sie an dem Projekt Code for Germany, einer deutschlandweiten Community, die digitale Werkzeuge und Anwendungen aus offenen Daten entwickelt. Julia hat Design und Neue Medien studiert und vor der Open Knowledge Foundation an politischen Kommunikationskampagnen mitgearbeitet. Sie engagiert sich im Verein Digitale Gesellschaft e. V. und spricht auf Konferenzen über freies Wissen und offene Tools."
-  bio_en: "Julia is project lead at OKF DE since 2012. Her focus lies in the area of Open Data and Civic Tech. She has realized a number of community-driven projects such as StadtLandCode, Germanys first incubator for Civic Tech, and a number of Open Data hackathons. Currently, she is the project lead of Code for Germany, a nation-wide civil tech community that builds digital tools and applications using Open Data. Julia studied Design and New Media, and worked in policy campaigns. She is a member of Digitale Gesellschaft e.V. and gives talks on Open Knowledge and Open Tools."
+  bio_en: "Julia is project lead at OKF DE since 2012. Her work focuses on the areas of Open Data and Civic Tech. She has realized a number of community-driven projects such as StadtLandCode, Germanys first incubator for Civic Tech, and a number of Open Data hackathons. Currently, she is the project lead of Code for Germany, a nationwide civil tech community that builds digital tools and applications using Open Data. Julia studied Design and New Media, and worked in policy campaigns before joining the Open Knowledge Foundation. She is a member of Digitale Gesellschaft e.V. and gives talks on Open Knowledge and Open Tools."
   mail: julia.kloiber@okfn.de
   twitter: j_kloiber
   website: http://juliakloiber.com/
@@ -54,7 +54,7 @@
   advisory: 0
   position:
   bio: "Maria Reimer ist Projektleiterin von Jugend hackt. Sie hat Public Administration und Public Policy in Münster, Enschede (Niederlande) und Erfurt studiert. Neben der Open Knowledge Foundation Deutschland arbeitet sie halbtags für eine Bundestagsabgeordnete. Ehrenamtlich setzt Maria sich im Führungskreis von Transparency International Deutschland für Informationsfreiheit ein."
-  bio_en: "Maria Reimer is project lead of Jugend hackt. She studied Public Administration and Public Policy. Next to OKF DE, she works part-time for German parliament member and actively promotes the Freedom of Information Act (FOI) as a Transparency International Germany volunteer."
+  bio_en: "Maria Reimer is project lead for Jugend hackt. She studied Public Administration and Public Policy. Next to OKF DE, she works part-time for a member of the German parliament and actively promotes the Freedom of Information Act (FOI) as a Transparency International Germany volunteer."
   mail: maria.reimer@okfn.de
   twitter: malienamadrina
   website:
@@ -66,7 +66,7 @@
   advisory: 0
   position:
   bio: "Paula organisiert zusammen mit Maria Jugend hackt. Über die Veranstaltung hat sie auch ihre Masterarbeit im Studiengang „Medien in der Bildung“ an der PH Freiburg geschrieben. Davor hat sie u.a. für das Fraunhofer Institut gearbeitet und Dokumentarfilme gedreht. Offene Daten findet Paula super, weil sie zu aktiver demokratischer Partizipation einladen."
-  bio_en: "Paula organises Jugend hackt together with Maria. The project was part of her master thesis on Media and Education at the PH Freiburg. Previously, she has worked for the Fraunhofer Institute and has filmed documentaries. She has a fable for Open Data, because it stimulates active democratic participation."
+  bio_en: "Paula organises Jugend hackt together with Maria. The project was part of her master thesis on Media and Education at the PH Freiburg. Previously, she worked for the Fraunhofer Institute and has filmed documentaries. Paula finds Open Data interesting and important because it stimulates active democratic participation."
   mail: paula.glaser@okfn.de
   twitter: rinhia
   website:
