--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -78,7 +78,7 @@
   advisory: 0
   position:
   bio: "Bela setzt sich zusammen mit Anna bei [OpenBudgets](https://okfn.de/projekte/openbudgets/) für mehr Transparenz und Rechnenschaft im Bereich der Haushaltsgestaltung in Europa ein. Er ist spezialisiert auf Öffentlichkeitsarbeit, Kommunikation und Designaufgaben und verfasst den monatlichen Newsletter der OKF DE. Er hält einen Master in „European Studies on Society, Science & Technology“ und startete im November 2014 bei der OKF DE."
-  bio_en: "Bela tries to bring more transparency to budget data in Europe with [OpenBudgets](https://okfn.de/projekte/openbudgets/). He is specialized in public relations, communication, and graphic design and compiles the monthly OKF newsletter. He holds a degree in European Studies on Society, Science and Technology and joined OKF DE in 2014."
+  bio_en: "Bela works alongside Anna to bring more transparency to budget data in Europe with [OpenBudgets](https://okfn.de/projekte/openbudgets/). He specializes in public relations, communication, and graphic design and compiles the monthly OKF newsletter. He holds a degree in European Studies on Society, Science and Technology and joined OKF DE in 2014."
   mail: bela.seeger@okfn.de
   twitter: belaseeger
   website:
@@ -90,7 +90,7 @@
   advisory: 0
   position:
   bio: "Fiona ist seit 2014 dabei und betreut und berät als Community Organizerin im Projekt Code for Germany über 20 Open Knowledge Labs in Deutschland. Nebenbei studiert sie Techniksoziologie an der Technischen Universität Berlin. Privat engagiert sie sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung, im Chaos Computer Club und interessiert sich für Gleichberechtigung in der IT. 2016 leitet Fiona das Projekt 'Digital Refugee Labs' im Rahmen von Code for Germany."
-  bio_en: "Fiona is Code for Germany's Community Organizer. She supports 20 Open Knowledge Labs together with Julia and Eileen and studies Technology/Sociology at the Technical University in Berlin. She has strong ties to a large number of NGOs that resonate with OKF DE's core values and engages in the field of digital literacy for a number of years. In 2016, Fiona will be project lead in the Code for Germany work stream 'Digital Refugee Labs'."
+  bio_en: "Fiona has been with OKF DE since 2014 and is Code for Germany's Community Organizer. She supports 20 Open Knowledge Labs together with Julia and Eileen and studies the sociology of technology at the Technical University in Berlin. She has strong ties to a number of different NGOs that are connected to OKF DE's work and has been active in the field of digital literacy for a number of years. In 2016, Fiona will be Project Lead in the Code for Germany project 'Digital Refugee Labs'."
   mail: fiona.krakenbuerger@okfn.de
   twitter: Fotografiona
   website: http://arduina.github.io/arduina.net/
