projekte-sortierung in kategorien (wie flyer)

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -26,10 +26,10 @@ projekte:
   Projekte: Projekte
   Intro: >
     Wir bringen Menschen zusammen, die digitale Bürger-Werkzeuge bauen, und wir betreiben offene Web-Infrastruktur für unsere Demokratie.
-  Forschungsprojekte: Forschungsprojekte
-  Tools: Tools
-  Events: Events
-  Archiv: Archiv
+  Forschung: Forschung
+  Bildung: Bildung
+  Politik: Politik
+  Archiv: Abgeschlossene Projekte
 projekt:
   Ansprechpartner: Ansprechpartner/innen
   Mailingliste: Mailingliste
