kommandozeilen skripte zur installation und nutzung von projektbezogener jeykll-version

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ staticurl: /static/
 exclude:
   - "CNAME"
   - "Gemfile*"
+  - "*.sh"
+  - "browserslist"
   - "Readme.md"
   - ".idea/"
   - ".git/"
