add translation vat ustid

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -86,7 +86,7 @@ impressum:
   Webseitendesign: Webseitendesign
   VereinsregisterNr: Vereinsregister Nr
   Steuernummer: Steuernummer
-  VAT: VAT
+  VAT: Umsatzsteuernummer
   EMail: E-Mail
   Telefon: Telefon
   Fax: Fax
