--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -89,3 +89,8 @@ impressum:
   EMail: Email
   Telefon: Phone
   Fax: Fax
+  Tech: Technology
+  TechBROWSERSTACK: >
+    This site is generously supported by <a href="https://www.browserstack.com">BrowserStack</a> for cross-browser compatibility.
+  TechJEKYLL: >
+    Build with <a href="https://jekyllrb.com/">Jekyll</a> and Data Love.
