--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -420,6 +420,20 @@
   website: 
   github: mojeffski
 
+- name: Leonard Wolf
+  title:
+  img: leonardwolf
+  staff: 1
+  board: 0
+  advisory: 0
+  position:
+  bio: "Leonard Wolf unterstützte 2015 bereits als Praktikant und Fotograf das Team von „Jugend hackt“ bei der Planung und Durchführung des Berliner Events. Im Juli 2016 schloss er seine Schullaufbahn ab und entschied sich dann für einen Bundesfreiwilligendienst. Diesen macht er nun seit September 2016  bei der Open Knowledge Foundation Deutschland. Dabei ist er vorrangig für „Jugend hackt“ und „Frag den Staat“ tätig und unterstützt die jeweiligen Teams. Leonard ist darüber hinaus auch ehrenamtlich bei mehreren Organisationen und Vereinen, die sich mit Jugendbeteiligung und Demokratiepädagogik auseinandersetzen, engagiert. Sein persönliches Interesse liegt in der Fotografie, weshalb er auch regelmäßig als Veranstaltungsfotograf unterwegs ist."
+  bio_en: "Leonard Wolf unterstützte 2015 bereits als Praktikant und Fotograf das Team von „Jugend hackt“ bei der Planung und Durchführung des Berliner Events. Im Juli 2016 schloss er seine Schullaufbahn ab und entschied sich dann für einen Bundesfreiwilligendienst. Diesen macht er nun seit September 2016  bei der Open Knowledge Foundation Deutschland. Dabei ist er vorrangig für „Jugend hackt“ und „Frag den Staat“ tätig und unterstützt die jeweiligen Teams. Leonard ist darüber hinaus auch ehrenamtlich bei mehreren Organisationen und Vereinen, die sich mit Jugendbeteiligung und Demokratiepädagogik auseinandersetzen, engagiert. Sein persönliches Interesse liegt in der Fotografie, weshalb er auch regelmäßig als Veranstaltungsfotograf unterwegs ist."
+  mail: "leonard.wolf@okfn.de"
+  twitter: woleonard
+  website: 
+  github:
+
 - name: Cosmin Cabulea
   title:
   img: cosmincabulea
