--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -463,14 +463,14 @@
   - name: Xiaowei Chen
   title:
   img: xiaoweichen
-  staff: 0
+  staff: 1
   board: 0
   advisory: 0
   position:
-  bio: "."
-  bio_en: "n/a"
+  bio: "Xiaowei arbeitet seit November 2016 im Rahmen des Bundeskanzler-Stipendiums bei Open Knowledge Foundation als Gastwissenschaftlerin und forscht zu Informationsfreiheit in Deutschland."
+  bio_en: "Xiaowei works in the frame of German Chancellor Fellowship since November 2016 for Open Knowledge Foundation as Visiting Scholar. Her project is Freedom of Information in Germany."
   mail: "xiaowei.chen@okfn.de"
-  twitter: xiaoweichen
+  twitter: xiaowei_chen
   website: 
   github: 
 
