update to jeykll 3

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -17,6 +17,8 @@ titles:
   Themen: Topics
   Impressum: Contact
   Tags: Blog Tags
+  Jobs: Jobs
+  Spenden: Donations
 themen:
   Themen: Topics
   Mehr: learn more
