--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-markdown: rdiscount
+markdown: kramdown
 highlighter: pygments
 fullurl: 'https://okfn.de'
 url: 'https://okfn.de'
@@ -18,6 +18,7 @@ gems:
   - jekyll-redirect-from
   - jekyll-sitemap
   - octopress-autoprefixer
+  - jekyll-paginate
 defaults:
   - scope:
       path: ""
