--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -15,6 +15,8 @@ titles:
   Themen: Themen
   Impressum: Impressum
   Tags: Tags im Blog
+  Jobs: Stellenangebote & Praktika
+  Spenden: Spenden
 themen:
   Themen: Themen
   Mehr: mehr erfahren
