little translation fixes

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -61,6 +61,7 @@ blog:
   SucheWirdGeladen: Suche wird geladen...
   NichtsGefunden: Kein Ergebnis
   ZurueckZumBlog: Zurück zum Blog
+  Und: "&"
 pagination:
   Seiten: Seiten
   Aktuelle: Aktuelle
