--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -63,6 +63,7 @@ blog:
   SucheWirdGeladen: Search is loading...
   NichtsGefunden: No results found
   ZurueckZumBlog: Back to the blog
+  Und: "&"
 pagination:
   Seiten: Pages
   Aktuelle: Current
