job-seite wird automatisch aus gekennzeichneten blog-posts generiert

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -108,3 +108,5 @@ impressum:
     Für das Testen von Browserkompatibilität wird diese Seite von <a href="www.browserstack.com">BrowserStack</a> unterstützt.
   TechJEKYLL: >
     HTML erzeugt mit <a href="https://jekyllrb.com/">Jekyll</a> und DataLove.
+jobs:
+  Informationen: Mehr Informationen…
