--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -107,3 +107,5 @@ impressum:
     This site is generously supported by <a href="https://www.browserstack.com">BrowserStack</a> for cross-browser compatibility.
   TechJEKYLL: >
     Build with <a href="https://jekyllrb.com/">Jekyll</a> and Data Love.
+jobs:
+  Informationen: More Informations…
