--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -102,11 +102,11 @@
   board: 0
   advisory: 0
   position:
-  bio: "Eileen ist seit Juli 2015 bei der OKF DE. Gemeinsam mit Julia und Fiona arbeitet sie am Projekt Code for Germany. Vor allem ist sie für Kommunikation und Öffentlichkeitsarbeit zuständig. Sie hat einen Bachelor in Philosophie und einen Master in Logik."
-  bio_en: "Eileen is part of the team behind Code for Germany. She is in charge of public relations and communication. Her studies were in philosophy and logic."
+  bio: "Eileen ist seit Juli 2015 bei der OKF DE und arbeitet in den Projekten Code for Germany und Prototype Fund. Sie hat einen Bachelor in Philosophie und einen Master in Logik."
+  bio_en: "Eileen is part of the team behind Code for Germany and the Prototype Fund. She studied philosophy and logic."
   mail: eileen.wagner@okfn.de
   twitter: flapperleenie
-  website: http://eileenwagner.xyz/
+  website: http://bumble.blue
   github: flapperleenie
 
 - name: Elisa Lindinger
@@ -409,20 +409,6 @@
   twitter: woleonard
   website:
   github:
-
-- name: Cosmin Cabulea
-  title:
-  img: cosmincabulea
-  staff: 1
-  board: 0
-  advisory: 0
-  position:
-  bio: "Cosmin arbeitet seit Mai 2016 als Projektleiter bei der Open Knowledge Foundation. Er betreut zur Zeit den Prototype Fund, den er zuvor mitentwickelt hat. Davor war er fünf Jahre bei der Deutschen Welle als Innovation Manager tätig. Aktuell ist er noch teilweise in der Wissenschaftsredaktion aktiv. Cosmin hat Medienwissenschaften studiert und interessiert sich für die Schnittstelle zwischen Technologie und Journalismus.  Mit Hackathons, Datenanalysen und Datenjournalismus Trainings vertreibt er sich seine Freizeit."
-  bio_en: "n/a"
-  mail: "cosmin.cabulea@okfn.de"
-  twitter: pushthings4ward
-  website:
-  github: pushthings4ward
 
 - name: Xiaowei Chen
   title:
