feed urls absolute in meta tag

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -42,6 +42,7 @@ person:
 thema:
   WeitereThemen: Weitere Themen
 blog:
+  FeedTitle: Blog der Open Knowledge Foundation Deutschland
   FeedAbo: mit dem Feedreader abonnieren
   Mehr: weiterlesen...
   Von: von
