--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -44,6 +44,7 @@ person:
 thema:
   WeitereThemen: More Topics
 blog:
+  FeedTitle: Blog of Open Knowledge Foundation Germany
   FeedAbo: subscribe with your feedreeder
   Mehr: Read full post...
   Von: by
