change bürgerrechte zu menschenrechte

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -22,7 +22,7 @@ themen:
   Mehr: mehr erfahren
   Intro:  >
      Der Open Knowledge Foundation Deutschland e.V. versteht sich als aktiver Teil der deutschen und europäischen Zivilgesellschaft.
-     Wir fördern und stärken die Bürgerrechte, wie sie im Grundgesetz und in der Europäischen Menschenrechtskonvention verankert sind.
+     Wir fördern und stärken die Menschenrechte.
      Wir setzen uns dabei insbesondere für folgende Themen der digitalen Gesellschaft ein:
 projekte:
   Projekte: Projekte
