--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -335,7 +335,7 @@
   board_alumni: 1
   advisory: 0
   position: Beisitzer
-  bio: "Christian Kreutz war einer der Gründungsmitglieder der Open Knowledge Foundation und baute die Organisten in den ersten 3 Jahren, als Vorstandsmitglied und mit einer Reihe von Projekte im Bereich der Finanztransparenz und Bürgerbeteiligung, mit auf. Er arbeitet weiterhin an Open Data Projekten und widmet sich ansonsten vollständig seinem Unternehmen, welches neue Wege im Bereich digitaler Innovation und Open Data geht: <a href='www.crisscrossed.de'>www.crisscrossed.de</a>."
+  bio: "Christian Kreutz war einer der Gründungsmitglieder der Open Knowledge Foundation und baute die Organisten in den ersten 3 Jahren, als Vorstandsmitglied und mit einer Reihe von Projekte im Bereich der Finanztransparenz und Bürgerbeteiligung, mit auf. Er arbeitet weiterhin an Open Data Projekten und widmet sich ansonsten vollständig seinem Unternehmen, welches neue Wege im Bereich digitaler Innovation und Open Data geht: <a href='http://www.crisscrossed.de'>www.crisscrossed.de</a>."
   bio_en: "Christian Kreutz war einer der Gründungsmitglieder der Open Knowledge Foundation und baute die Organisten in den ersten 3 Jahren, als Vorstandsmitglied und mit einer Reihe von Projekte im Bereich der Finanztransparenz und Bürgerbeteiligung, mit auf. Er arbeitet weiterhin an Open Data Projekten und widmet sich ansonsten vollständig seinem Unternehmen, welches neue Wege im Bereich digitaler Innovation und Open Data geht: www.crisscrossed.de. "
   mail:
   twitter:
